# foundation_pose_ros

./: .flake8  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml  readme.md
config/: create_mask.yaml  pose_detector.yaml
config/rviz/: pose_detection.rviz
foundation_pose_ros/: package.xml  setup.py
foundation_pose_ros/config/: create_mask.yaml  pose_detector.yaml
foundation_pose_ros/data/meshes/cube/: cube.obj.mtl
foundation_pose_ros/launch/: launch_pose_detection.launch
foundation_pose_ros/scripts/: create_mask_node.py  pose_detector_node.py
launch/: create_mask.launch  est_and_track.launch  only_estimate.launch  only_mask.launch
scripts/: coordinate_frame_converter.py  create_mask_client.py  create_mask_node.py  create_mask_server.py  plotting_utils.py  pose_est_and_track.py  pose_est_client.py  pose_est_server.py  pose_estimator.py
srv/: CreateMask.srv  EstPose.srv  ShelfPose.srv
